<resources>
    <string name="app_name">NPE_06_Shoplants</string>
    <string name="get_started">Get Started</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="email_address">Email Address</string>
    <string name="find_your_perfect_plants">Find Your Perfect Plants.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="search_for_plants">Search for plants</string>
    <string name="recommended">Recommended</string>
    <string name="your_favorite_plants">Your Favorite Plants.</string>
    <string name="username_or_email">Username or Email</string>
    <string name="dont_have_any_account">Dont Have Any Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="username">Username</string>
    <string name="empty">‏‏‎ ‎</string>
    <string name="user_detail">User Detail</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="rewards">Rewards</string>
    <string name="profil_bisnis">Bussines Profile</string>
    <string name="your_card">Your Card</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="bellapoarch571_email_com">useremail@email.com</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="save_changes">Save Changes</string>
    <string name="about">About</string>
    <string name="_0">0</string>
    <string name="plant_desc">Cactus can grow for a long time without water, so there is no need to water it as often</string>
    <string name="select_size">Select Size</string>
    <string name="_40x80cm">40X80cm</string>
    <string name="_30x60cm">30X60cm</string>
    <string name="_20x40cm">20X40cm</string>
    <string name="add_to_cart_rp_0">Add To Cart - Rp.0</string>
    <string name="keranjang_saya">Keranjang Saya</string>
    <string name="bayar_sekarang">Bayar Sekarang - Rp.0</string>
    <string name="pengiriman_dan_pembayaran">Pengiriman dan pembayaran</string>
    <string name="alamat">Alamat</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="catatan_untuk_penjual_opsional">Catatan untuk Penjual (Opsional)</string>
    <string name="pesan_instruksi">Pesan Instruksi</string>
</resources>