<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiaryBgColor"
    tools:context=".EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:elevation="8dp"
        android:theme="@style/Theme.NPE_06_Shoplants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/empty">

        <TextView
            android:id="@+id/tvToolbarEditProfileTitle"
            style="@style/ToolbarTitleAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_profile" />

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civUserImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:backgroundTint="@color/accentColor2"
        android:elevation="4dp"
        android:padding="8dp"
        android:src="@drawable/ic_undraw_female_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbEditProfile" />

    <TextView
        android:id="@+id/tvEditProfileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/edit_profile"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/civUserImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfUsernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/username"
        app:boxBackgroundColor="@color/tertiaryBgColor"
        app:endIconMode="clear_text"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEditProfileText"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:inputType="text"
            android:text="@string/username"
            android:textColor="@color/accentColor1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:hint="@string/email_address"
        app:boxBackgroundColor="@color/tertiaryBgColor"
        app:endIconMode="clear_text"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfUsernameEdit"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:inputType="textEmailAddress"
            android:text="@string/bellapoarch571_email_com"
            android:textColor="@color/accentColor1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvChangePassText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/ganti_password"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfEmailEdit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password_baru"
        app:boxBackgroundColor="@color/tertiaryBgColor"
        app:endIconMode="password_toggle"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChangePassText"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:inputType="textPassword"
            android:textColor="@color/accentColor1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:paddingVertical="12dp"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:backgroundTint="@color/accentColor1"
        app:cornerRadius="8dp"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>